# KliqueAndroid

./: .gitignore  build.gradle.kts  dependencies.txt  settings.gradle.kts  testkeystore
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/assets/: emojis.json
app/src/main/cpp/: native-lib.cpp
app/src/main/res/drawable/: add_24px.xml  arrow_upward_24px.xml  attach_file_24px.xml  background_rounded_corner.xml  chat_items_background.xml  check_24px.xml  circular_gray_background.xml  circular_pink_background.xml  circular_profile_image.xml  custom_comment_background.xml  done_all_24px.xml  gist_item_rounded_rectangle.xml  gradiented_square.xml  gray_rounded_corner.xml  gray_search_rounded_corner.xml  header_gradient.xml  ic_visibility.xml  ic_visibility_off.xml  left_message_shape.xml  mail_24px.xml  post_rounded_rect.xml  right_message_shape.xml  search_24px.xml  star_filled.xml  underline_background.xml  verified_24px.xml  wifi_24px.xml
app/src/main/res/layout/: activity_main.xml  audio_play.xml  bio_view.xml  bottom_and_top_bar.xml  captions.xml  chat_list.xml  chats_chat_item.xml  clique_item.xml  coment_modal_bs.xml  comment_item.xml  comment_reply_item.xml  confirmation_dialog.xml  create_gist_row.xml  drawer.xml  enter_gist_pop_up.xml  fragment_book_shelf.xml  fragment_chats.xml  fragment_home.xml  gist_chat_room.xml  gist_image_display.xml  gist_item.xml  gist_message_container.xml  gist_messages_preview.xml  gist_start_message.xml  gist_text.xml  gist_tl_recycler.xml  gist_video.xml  inner_gist_page.xml  message_entry.xml  ownership_dialog.xml  (+13 more)
(+161 files in other folders)
